--- a/app/src/main/res/layout/activity_how_to_page.xml
+++ b/app/src/main/res/layout/activity_how_to_page.xml
@@ -19,7 +19,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.705" />
+        app:layout_constraintVertical_bias="0.609" />
 
     <TextView
         android:id="@+id/howToTitleTextView"
@@ -32,7 +32,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/howToTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.394" />
+        app:layout_constraintVertical_bias="0.466" />
 </androidx.constraintlayout.widget.ConstraintLayout>
