--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="red">#FF0000</color>
     <color name="dark_red">#C50202</color>
     <color name="green">#008000</color>
-    <color name="lime_green">#00FF00</color>
+    <color name="lime_green">#04D604</color>
     <color name="purple">#7A27C7</color>
     <color name="orange">#F57C00</color>
     <color name="light_grey">#DDDCDC</color>
