--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -48,12 +48,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/card0"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -62,8 +64,9 @@
 
             <ImageView
                 android:id="@+id/card1"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -72,8 +75,9 @@
 
             <ImageView
                 android:id="@+id/card2"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -87,12 +91,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/card3"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -101,8 +107,9 @@
 
             <ImageView
                 android:id="@+id/card4"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -111,8 +118,9 @@
 
             <ImageView
                 android:id="@+id/card5"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -126,12 +134,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/card6"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -140,8 +150,9 @@
 
             <ImageView
                 android:id="@+id/card7"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -150,8 +161,9 @@
 
             <ImageView
                 android:id="@+id/card8"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -163,14 +175,16 @@
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:gravity="center">
 
             <ImageView
                 android:id="@+id/card9"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -179,8 +193,9 @@
 
             <ImageView
                 android:id="@+id/card10"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
@@ -189,8 +204,9 @@
 
             <ImageView
                 android:id="@+id/card11"
-                android:layout_width="90dp"
-                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="@drawable/card_background_empty"
                 android:contentDescription="@string/contentDescriptionForCards"
                 android:onClick="onCardClick"
