--- a/app/src/main/res/layout/activity_select_multiplayer_type.xml
+++ b/app/src/main/res/layout/activity_select_multiplayer_type.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewModel.scoreboard.ScoreboardActivity">
+    tools:context=".ViewModel.multiplayer.SelectMultiplayerTypeActivity">
 
     <Button
-        android:id="@+id/myScoreBtn"
-        android:layout_width="170dp"
+        android:id="@+id/randomGameBtn"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/dark_blue"
         android:gravity="center"
-        android:onClick="switchToMyScores"
-        android:text="@string/myScoresBtn"
+        android:onClick="switchToRandomGame"
+        android:text="@string/randomGameBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintVertical_bias="0.257" />
 
     <Button
-        android:id="@+id/worldScoreBtn"
-        android:layout_width="170dp"
+        android:id="@+id/privateGameBtn"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/dark_blue"
         android:gravity="center"
-        android:onClick="switchToWorldScores"
-        android:text="@string/worldScoresBtn"
+        android:onClick="switchToPrivateGame"
+        android:text="@string/privateGameBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.426" />
 </androidx.constraintlayout.widget.ConstraintLayout>
