--- a/app/src/main/res/layout/activity_waiting_for_game.xml
+++ b/app/src/main/res/layout/activity_waiting_for_game.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewModel.scoreboard.ScoreboardActivity">
+    tools:context=".ViewModel.multiplayer.WaitingForGameActivity">
+
+    <TextView
+        android:id="@+id/waitingTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/waitingTV"
+        android:textColor="@color/dark_blue"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.209" />
 
     <Button
-        android:id="@+id/myScoreBtn"
-        android:layout_width="170dp"
+        android:id="@+id/stopWaitingBtn"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/dark_blue"
-        android:gravity="center"
-        android:onClick="switchToMyScores"
-        android:text="@string/myScoresBtn"
+        android:onClick="switchBackToSelectMultiplayerType"
+        android:text="@string/stopWaitingBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.232" />
-
-    <Button
-        android:id="@+id/worldScoreBtn"
-        android:layout_width="170dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/dark_blue"
-        android:gravity="center"
-        android:onClick="switchToWorldScores"
-        android:text="@string/worldScoresBtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.822" />
 </androidx.constraintlayout.widget.ConstraintLayout>
