--- a/app/src/main/res/layout/activity_world_scores.xml
+++ b/app/src/main/res/layout/activity_world_scores.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
+        android:id="@+id/scoresListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/backBtn"
