--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="purple">#7A27C7</color>
     <color name="orange">#F57C00</color>
     <color name="light_grey">#DDDCDC</color>
+    <color name="yellow">#FFCD51</color>
 </resources>
