--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -8,7 +8,7 @@
     tools:context=".ViewModel.SingleplayerActivity">
 
     <TextView
-        android:id="@+id/pointTextView"
+        android:id="@+id/opponentPointTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -38,7 +38,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pointTextView">
+        app:layout_constraintTop_toBottomOf="@+id/opponentPointTextView">
 
         <TableRow
             android:id="@+id/tableRow0"
