--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.165" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/connectionCodeET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -45,7 +45,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/dark_blue"
         android:gravity="center"
-        android:onClick="switchToMultiplayer"
+        android:onClick="joinGame"
         android:text="@string/joinWithCodeBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
