--- a/app/src/main/res/layout/activity_how_to_page.xml
+++ b/app/src/main/res/layout/activity_how_to_page.xml
@@ -24,6 +24,9 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +43,6 @@
                 android:id="@+id/howToPlayTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:text="@string/howToText"
                 android:textColor="@color/black"
                 android:textSize="24sp" />
