progress circle and file rearrangement

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="orange">#F57C00</color>
     <color name="light_grey">#DDDCDC</color>
     <color name="yellow">#FFCD51</color>
+    <color name="grey">#777773</color>
 </resources>
